--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 <body>
     
     <h1>NodeJS Chat App</h1>
-    
+
+    <div id="messageBox"></div>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/index.js"></script>
+
 </body>
 </html>
