--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
 
     <div id="messageBox"></div>
 
+    <form id="message-form" onsubmit="sendMessage()">
+        <div>
+            <input type="text" name="message" placeholder="Your message"/>
+            <button type="submit">Send</button>
+        </div>
+    </form>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 
