added selectors for rooms

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,11 @@
 
                 <div class="form-field">
                     <label for="room">Room name</label>
-                    <input type="text" name="room"/>
+                    <select name="room" id="room">
+                        <option value="default">Default</option>
+                        <option value="test">Test</option>
+                        <option value="misc">Misc</option>
+                    </select>
                 </div>
 
                 <div class="form-field">
